# jules_test_2

chat_module/: pyproject.toml
chat_module/chat_module/: __init__.py  dummy_copilot_tool_agent_sse.py  main.py  session.py  utils.py
chat_module/tests/: test_session.py
shell_module/: pyproject.toml  run_automation_example.py
shell_module/shell_module/: __init__.py  constants.py  main.py  session.py  shell.py  styles.py
shell_module/tests/: __init__.py  test_realtime_output.py  test_shell.py
