[tool.poetry]
name = "shell-module"
version = "0.1.0"
description = "An interactive shell module providing a pseudo-terminal experience."
authors = ["Your Name <you@example.com>"] # Replace with actual author if desired
license = "MIT" # Or your preferred license

[tool.poetry.dependencies]
python = "^3.8"
prompt-toolkit = "^3.0" # For the interactive CLI

[tool.poetry.dev-dependencies]
pytest = "^7.0" # For running tests
pytest-asyncio = "^0.20" # For testing asyncio code with pytest

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
